--- a/index.html
+++ b/index.html
@@ -1,1 +1,401 @@
-under construction
+<!doctype html>
+<html lang="it">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Sito in aggiornamento del Movimento 5 Stelle Toscana. Iscriviti alla newsletter per rimanere aggiornato." />
+  <title>M5S Toscana — Sito in aggiornamento</title>
+
+  <style>
+    :root{
+      --bg: #0b0d12;
+      --card: rgba(255,255,255,.06);
+      --card2: rgba(255,255,255,.10);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.72);
+      --line: rgba(255,255,255,.14);
+      --accent: #f3d000;
+      --accent2: #ffd84d;
+      --shadow: 0 20px 60px rgba(0,0,0,.45);
+      --radius: 18px;
+      --max: 980px;
+    }
+
+    *{ box-sizing:border-box; }
+    html,body{ height:100%; }
+    body{
+      margin:0;
+      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      color: var(--text);
+      background:
+        radial-gradient(900px 500px at 20% 15%, rgba(243,208,0,.18), transparent 55%),
+        radial-gradient(900px 500px at 80% 20%, rgba(255,216,77,.12), transparent 55%),
+        radial-gradient(1200px 800px at 50% 100%, rgba(255,255,255,.06), transparent 60%),
+        var(--bg);
+      line-height: 1.5;
+    }
+
+    a{ color: inherit; }
+
+    .wrap{
+      min-height: 100%;
+      display: grid;
+      place-items: center;
+      padding: 24px 16px 40px;
+    }
+
+    .container{
+      width: 100%;
+      max-width: var(--max);
+      display: grid;
+      gap: 18px;
+    }
+
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap: 16px;
+      padding: 14px 6px 0;
+    }
+
+    .brand{
+      display:flex;
+      align-items:center;
+      gap: 14px;
+      min-width: 0;
+    }
+
+    .logo{
+      width: 56px;
+      height: 56px;
+      border-radius: 999px;
+      object-fit: cover;
+      border: 1px solid var(--line);
+      background: rgba(255,255,255,.08);
+      box-shadow: 0 10px 25px rgba(0,0,0,.35);
+      flex: 0 0 auto;
+    }
+
+    .brand h1{
+      margin:0;
+      font-size: 16px;
+      letter-spacing: .2px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap: 10px;
+      padding: 10px 12px;
+      border-radius: 999px;
+      border: 1px solid var(--line);
+      background: rgba(255,255,255,.05);
+      color: var(--muted);
+      font-size: 13px;
+    }
+
+    main{
+      border: 1px solid var(--line);
+      background: linear-gradient(180deg, var(--card), rgba(255,255,255,.03));
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      padding: 22px 18px;
+    }
+
+    .hero{
+      display:grid;
+      gap: 12px;
+      padding: 6px 2px 10px;
+    }
+
+    .hero h2{
+      margin: 0;
+      font-size: clamp(26px, 4.6vw, 44px);
+      line-height: 1.08;
+      letter-spacing: -0.6px;
+    }
+
+    .hero p{
+      margin: 0;
+      color: var(--muted);
+      font-size: clamp(15px, 2.2vw, 18px);
+      max-width: 64ch;
+    }
+
+    .grid{
+      display:grid;
+      gap: 14px;
+      margin-top: 18px;
+      grid-template-columns: 1fr;
+    }
+
+    .card{
+      border: 1px solid var(--line);
+      background: rgba(255,255,255,.04);
+      border-radius: calc(var(--radius) - 4px);
+      padding: 16px;
+    }
+
+    .card h3{
+      margin: 0 0 6px 0;
+      font-size: 16px;
+      letter-spacing: .2px;
+    }
+
+    .card p{
+      margin: 0 0 12px 0;
+      color: var(--muted);
+      font-size: 14px;
+    }
+
+    .ctaRow{
+      display:flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      align-items: center;
+    }
+
+    .btn{
+      appearance: none;
+      border: 0;
+      text-decoration: none;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      padding: 12px 14px;
+      border-radius: 12px;
+      font-weight: 650;
+      letter-spacing: .2px;
+      cursor: pointer;
+      transition: transform .08s ease, filter .2s ease, background .2s ease, border-color .2s ease;
+      user-select: none;
+      -webkit-tap-highlight-color: transparent;
+      font-size: 14px;
+    }
+
+    .btn:active{ transform: translateY(1px); }
+
+    .btnPrimary{
+      background: linear-gradient(180deg, var(--accent2), var(--accent));
+      color: #151515;
+      box-shadow: 0 14px 35px rgba(243,208,0,.20);
+    }
+
+    .btnPrimary:hover{ filter: brightness(1.02); }
+
+    .btnGhost{
+      background: rgba(255,255,255,.03);
+      border: 1px solid var(--line);
+      color: var(--text);
+    }
+
+    .btnGhost:hover{
+      background: rgba(255,255,255,.06);
+      border-color: rgba(255,255,255,.22);
+    }
+
+    .social{
+      display:grid;
+      gap: 10px;
+    }
+
+    .social a{
+      display:flex;
+      align-items:center;
+      justify-content: space-between;
+      gap: 14px;
+      text-decoration: none;
+      padding: 12px 12px;
+      border-radius: 12px;
+      border: 1px solid var(--line);
+      background: rgba(255,255,255,.03);
+      transition: background .2s ease, border-color .2s ease, transform .08s ease;
+    }
+
+    .social a:hover{
+      background: rgba(255,255,255,.06);
+      border-color: rgba(255,255,255,.22);
+    }
+
+    .social a:active{ transform: translateY(1px); }
+
+    .social .label{
+      display:flex;
+      flex-direction:column;
+      gap: 2px;
+      min-width: 0;
+    }
+
+    .social .label strong{
+      font-size: 14px;
+      letter-spacing: .2px;
+    }
+
+    .social .label span{
+      font-size: 12px;
+      color: var(--muted);
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      max-width: 44ch;
+    }
+
+    .arrow{
+      opacity:.8;
+      flex: 0 0 auto;
+      font-size: 16px;
+    }
+
+    footer{
+      padding: 4px 6px 0;
+      color: var(--muted);
+      font-size: 12px;
+      display:flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      align-items:center;
+      justify-content: space-between;
+    }
+
+    .smallLinks{
+      display:flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    .smallLinks a{
+      color: var(--muted);
+      text-decoration: none;
+      border-bottom: 1px dashed rgba(255,255,255,.20);
+    }
+    .smallLinks a:hover{
+      color: var(--text);
+      border-bottom-color: rgba(255,255,255,.35);
+    }
+
+    /* Desktop layout */
+    @media (min-width: 860px){
+      main{ padding: 30px 28px; }
+      .grid{
+        grid-template-columns: 1.25fr .75fr;
+        align-items: start;
+      }
+      .logo{ width: 64px; height: 64px; }
+      .brand h1{ font-size: 17px; }
+    }
+
+    /* Respect reduced motion */
+    @media (prefers-reduced-motion: reduce){
+      *{ transition: none !important; scroll-behavior: auto !important; }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="wrap">
+    <div class="container">
+      <header>
+        <div class="brand">
+          <img class="logo" src="logo-m5stoscana.png" alt="Logo Movimento 5 Stelle Toscana" />
+          <div style="min-width:0">
+            <h1>M5S Toscana</h1>
+            <div class="pill" aria-label="Stato del sito">
+              <span aria-hidden="true">⚙️</span>
+              <span>Sito in aggiornamento</span>
+            </div>
+          </div>
+        </div>
+
+        <a class="btn btnGhost" href="https://m5stoscana.substack.com" target="_blank" rel="noopener noreferrer">
+          Newsletter
+          <span aria-hidden="true">↗</span>
+        </a>
+      </header>
+
+      <main>
+        <section class="hero">
+          <h2>Stiamo preparando il nuovo sito del Movimento 5 Stelle Toscana</h2>
+          <p>
+            Nel frattempo potete iscrivervi alla newsletter o canali social per rimanere aggiornati sulle nostre attività e iniziative.
+          </p>
+        </section>
+
+        <section class="grid" aria-label="Contenuti principali">
+          <div class="card">
+            <h3>Iscriviti per restare aggiornato</h3>
+            <div class="ctaRow">
+              <a class="btn btnPrimary" href="https://m5stoscana.substack.com" target="_blank" rel="noopener noreferrer">
+                Vai alla newsletter
+                <span aria-hidden="true">→</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="card">
+            <h3>Seguici sui canali social</h3>
+            <p>
+              Per aggiornamenti rapidi e per partecipare alla community.
+            </p>
+
+            <nav class="social" aria-label="Link social">
+              <a href="https://www.facebook.com/Movimento5StelleToscana/" target="_blank" rel="noopener noreferrer">
+                <div class="label">
+                  <strong>Facebook</strong>
+                  <span>facebook.com/Movimento5StelleToscana</span>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+
+              <a href="https://www.instagram.com/toscana5stelle/" target="_blank" rel="noopener noreferrer">
+                <div class="label">
+                  <strong>Instagram</strong>
+                  <span>instagram.com/toscana5stelle</span>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+
+              <a href="https://t.me/m5s_toscana" target="_blank" rel="noopener noreferrer">
+                <div class="label">
+                  <strong>Canale Telegram</strong>
+                  <span>t.me/m5s_toscana</span>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+
+              <a href="https://whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X" target="_blank" rel="noopener noreferrer">
+                <div class="label">
+                  <strong>Canale WhatsApp</strong>
+                  <span>whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X</span>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+            </nav>
+          </div>
+        </section>
+      </main>
+
+      <footer>
+        <div>© <span id="y"></span> M5S Toscana</div>
+        <div class="smallLinks">
+          <a href="https://m5stoscana.substack.com" target="_blank" rel="noopener noreferrer">Newsletter</a>
+          <a href="https://www.facebook.com/Movimento5StelleToscana/" target="_blank" rel="noopener noreferrer">Facebook</a>
+          <a href="https://www.instagram.com/toscana5stelle/" target="_blank" rel="noopener noreferrer">Instagram</a>
+          <a href="https://t.me/m5s_toscana" target="_blank" rel="noopener noreferrer">Telegram</a>
+          <a href="https://whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+        </div>
+      </footer>
+    </div>
+  </div>
+
+  <script>
+    // anno corrente
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
