--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         </div>
 
         <a class="btn btnGhost" href="https://www.movimento5stelletoscana.it/" target="_blank" rel="noopener noreferrer">
-          Vai all'attuale ufficiale
+          Vai all'attuale sito ufficiale
           <span aria-hidden="true">↗</span>
         </a>
       </header>
@@ -427,6 +427,22 @@
                 <span class="arrow" aria-hidden="true">↗</span>
               </a>
 
+              <a href="https://whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X" target="_blank" rel="noopener noreferrer">
+                <div class="left">
+                  <span class="icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                      <path d="M12 2a10 10 0 0 0-8.5 15.3L2 22l4.7-1.5A10 10 0 1 0 12 2z" />
+                      <path d="M8.5 8.8c.2-.6.8-.8 1.3-.5l1.1.6c.5.3.7.9.4 1.4l-.4.7c.7 1.3 1.8 2.3 3.1 3l.7-.4c.5-.3 1.1-.1 1.4.4l.6 1.1c.3.5.1 1.1-.5 1.3-1 .4-2.1.4-3.1-.1-2.1-1-3.8-2.7-4.8-4.8-.5-1-.5-2.1-.1-3.1z" />
+                    </svg>
+                  </span>
+                  <div class="label">
+                    <strong>Canale WhatsApp</strong>
+                    <span>whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X</span>
+                  </div>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+
               <a href="https://t.me/m5s_toscana" target="_blank" rel="noopener noreferrer">
                 <div class="left">
                   <span class="icon" aria-hidden="true">
@@ -443,21 +459,6 @@
                 <span class="arrow" aria-hidden="true">↗</span>
               </a>
 
-              <a href="https://whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X" target="_blank" rel="noopener noreferrer">
-                <div class="left">
-                  <span class="icon" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-                      <path d="M12 2a10 10 0 0 0-8.5 15.3L2 22l4.7-1.5A10 10 0 1 0 12 2z" />
-                      <path d="M8.5 8.8c.2-.6.8-.8 1.3-.5l1.1.6c.5.3.7.9.4 1.4l-.4.7c.7 1.3 1.8 2.3 3.1 3l.7-.4c.5-.3 1.1-.1 1.4.4l.6 1.1c.3.5.1 1.1-.5 1.3-1 .4-2.1.4-3.1-.1-2.1-1-3.8-2.7-4.8-4.8-.5-1-.5-2.1-.1-3.1z" />
-                    </svg>
-                  </span>
-                  <div class="label">
-                    <strong>Canale WhatsApp</strong>
-                    <span>whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X</span>
-                  </div>
-                </div>
-                <span class="arrow" aria-hidden="true">↗</span>
-              </a>
             </nav>
           </div>
         </section>
@@ -469,8 +470,9 @@
           <a href="https://m5stoscana.substack.com" target="_blank" rel="noopener noreferrer">Newsletter</a>
           <a href="https://www.facebook.com/Movimento5StelleToscana/" target="_blank" rel="noopener noreferrer">Facebook</a>
           <a href="https://www.instagram.com/toscana5stelle/" target="_blank" rel="noopener noreferrer">Instagram</a>
-          <a href="https://t.me/m5s_toscana" target="_blank" rel="noopener noreferrer">Telegram</a>
           <a href="https://whatsapp.com/channel/0029VbCa8rS1iUxWBNfPmc1X" target="_blank" rel="noopener noreferrer">WhatsApp</a>
+          <a href="https://t.me/m5s_toscana" target="_blank" rel="noopener noreferrer">Telegram</a>
+          <a href="https://www.movimento5stelletoscana.it/" target="_blank" rel="noopener noreferrer">movimento5stelletoscana.it</a>
         </div>
       </footer>
     </div>
