--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
       <main>
         <section class="hero">
           <h2>Movimento 5 Stelle Toscana</h2>
-          <p>Stiamo preparando il nuovo sito. Nel frattempo potete <strong>iscrivervi alla newsletter</strong> o canali social per rimanere aggiornati sulle nostre attività e iniziative.
+          <p>Stiamo preparando il nuovo sito. Intanto potete <strong>iscrivervi alla newsletter</strong> o ai canali social per rimanere aggiornati sulle nostre attività e iniziative.
           </p>
         </section>
 
@@ -391,7 +391,7 @@
           <div class="card">
             <h3>Seguici sui canali social</h3>
             <p>
-              Per aggiornamenti rapidi e per partecipare alla community.
+              Per aggiornamenti rapidi e per partecipare al Movimento.
             </p>
 
             <nav class="social" aria-label="Link social">
@@ -454,6 +454,22 @@
                   <div class="label">
                     <strong>Canale Telegram</strong>
                     <span>t.me/m5s_toscana</span>
+                  </div>
+                </div>
+                <span class="arrow" aria-hidden="true">↗</span>
+              </a>
+
+              <a href="https://linktr.ee/m5stoscana" target="_blank" rel="noopener noreferrer">
+                <div class="left">
+                  <span class="icon" aria-hidden="true">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
+                      <path d="M10 13a5 5 0 0 1 0-7l1.5-1.5a5 5 0 0 1 7 7L17 12" />
+                      <path d="M14 11a5 5 0 0 1 0 7L12.5 19.5a5 5 0 1 1-7-7L7 12" />
+                    </svg>
+                  </span>
+                  <div class="label">
+                    <strong>Linktr.ee</strong>
+                    <span>linktr.ee/m5stoscana</span>
                   </div>
                 </div>
                 <span class="arrow" aria-hidden="true">↗</span>
